[gd_scene load_steps=7 format=2]

[ext_resource path="res://art_assets/title_screen_clouds_v1-2.png" type="Texture" id=1]
[ext_resource path="res://TitleScreen/Selector.tscn" type="PackedScene" id=2]
[ext_resource path="res://TitleScreen/TitleScreen.gd" type="Script" id=3]
[ext_resource path="res://sound_assets/menu.wav" type="AudioStream" id=4]
[ext_resource path="res://sound_assets/menu_loop.mp3" type="AudioStream" id=5]

[sub_resource type="Theme" id=1]

[node name="TitleScreen" type="Panel"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = -301.0
margin_top = -213.0
margin_right = 297.0
margin_bottom = 223.0
theme = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="Sprite"]
current = true
zoom = Vector2( 0.244, 0.201 )

[node name="MenuPlacements" type="Control" parent="."]
margin_left = -75.0
margin_top = -21.0
margin_right = -62.0
margin_bottom = -8.0

[node name="new" type="Node2D" parent="MenuPlacements"]
position = Vector2( 13, 6 )

[node name="load" type="Node2D" parent="MenuPlacements"]
position = Vector2( 7, 34 )

[node name="quit" type="Node2D" parent="MenuPlacements"]
position = Vector2( 36, 61 )

[node name="Selector" parent="." instance=ExtResource( 2 )]
margin_top = 8.0
margin_right = 0.0
margin_bottom = 9.0

[node name="MenuSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="MenuMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
